# ssdmoe

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  opencode.json  pyproject.toml
benchmarks/: README.md  bench_component_loading.py  bench_decode.py  bench_expert_hit_rate.py  bench_expert_mapper.py  bench_generate.py  bench_mamba.py  bench_next_layer_predict.py  bench_routing_correlation.py  bench_storage.py  collect_expert_data.py  mixed_k_experiment.py  overlap_experiment.py  pipelined_bench.py  pread_expert_bench.py  profile_bottleneck.py  qwen_stream_probe.py  stream_qwen_bench.py  train_expert_mapper.py  verify_changes.py
configs/: opencode-streamed-simple.json
docs/: architecture.md  chat-ui.md  development.md  experiment-log.md  model-comparison.md  openai-compatible-server-checklist.md  opencode-integration.md  research-methodology.md  start-process.md  streamed-server-architecture.md  streaming-experiment-log.md  streaming-qwen35b-assessment.md
native/: Makefile  expert_io.c  expert_mem.c  expert_read_bench.m  expert_reader.c  expert_reader.h  expert_reader_serial.c
prompts/: cloud-streaming-qwen35b-handoff.txt  web-research.txt
scripts/: bench_decode_window_cache.py  mlx-server.sh  nemotron-server.sh  nemotron-super-server.sh  open-webui-streamed.sh  open-webui.sh  opencode-streamed-simple.sh  profile_bottleneck.py  speculative_cache_study.py  stream_qwen_bench.py  stream_qwen_generate.py  streamed-chat.sh  streamed-qwen-server.sh  streamed_qwen_server.py  verify_changes.py
streaming_qwen/: __init__.py  expert_store.py  fused_expert.py  (+8 more)
(+37 files in other folders)
