[project]
name = "streaming-qwen-server"
version = "0.1.0"
description = "Qwen3.5-35B MoE streaming inference server — runs 35B on 16 GB via on-demand expert loading"
authors = [
    {name = "Rasoul", email = ""}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "mlx-lm (>=0.31.1,<0.32.0)"
]

[tool.poetry]
packages = [{include = "streaming_qwen", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
