[project]
name = "ssdmoe"
version = "0.1.0"
description = "Qwen3.5-35B MoE streaming inference server — runs 35B on 16 GB via on-demand expert loading from SSD"
authors = [
    {name = "Rasoul"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "mlx-lm (>=0.31.1,<0.32.0)"
]

[project.scripts]
ssdmoe-build-index = "streaming_moe.build_index:main"

[tool.poetry]
packages = [{include = "streaming_moe", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
